Remove global
